add Blockchains routes and component
