# src/api.ts
@@ -5,6 +5,7 @@ import user from '@components/user/user.router';
 import dashboard from '@components/dashboard/dashboard.router';
 import databaseInfo from '@components/db-api/databaseInfo.router';
 import dappAnalytics from '@components/dapp-analytics/dapp-analytics.router';
+import blockchains from '@components/blockchain/blockchain.router';
 
 const router: Router = Router();
 router.use(healthCheck);
@@ -12,5 +13,6 @@ router.use(user);
 router.use(databaseInfo);
 router.use(dashboard);
 router.use(dappAnalytics);
+router.use(blockchains);
 
 export default router;
