# src/swagger/swagger.json
@@ -14,7 +14,7 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/dapp-analytics": {
+    "/api/dapp-analytics": {
       "post": {
         "tags": ["DApp Management"],
         "summary": "Save a new DApp",
@@ -62,7 +62,7 @@
         }
       }
     },
-    "/dapp-analytics/{id}": {
+    "/api/dapp-analytics/{id}": {
       "get": {
         "tags": ["DApp Management"],
         "summary": "Get a DApp by ID",
@@ -122,6 +122,83 @@
           },
           "404": {
             "description": "DApp not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/blockchain/all": {
+      "get": {
+        "tags": ["Blockchains"],
+        "summary": "Get all blockchains",
+        "description": "Retrieve all blockchains from the system.",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "active",
+            "in": "query",
+            "required": false,
+            "type": "boolean",
+            "default": true,
+            "description": "Filter blockchains by active status"
+          },
+          {
+            "name": "growthindex",
+            "in": "query",
+            "required": false,
+            "type": "boolean",
+            "description": "Filter blockchains by growth index"
+          },
+          {
+            "name": "dappgrowth",
+            "in": "query",
+            "required": false,
+            "type": "boolean",
+            "description": "Filter blockchains by DApp growth"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of blockchains",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Blockchain"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/blockchain/{slug}": {
+      "get": {
+        "tags": ["Blockchains"],
+        "summary": "Get a blockchain by slug",
+        "description": "Retrieve a single blockchain by its slug.",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Slug of the blockchain to retrieve"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A single blockchain",
+            "schema": {
+              "$ref": "#/definitions/Blockchain"
+            }
+          },
+          "404": {
+            "description": "Blockchain not found"
           },
           "500": {
             "description": "Internal server error"
@@ -406,6 +483,39 @@
             },
             "required": ["name", "address", "abi"]
           }
+        }
+      }
+    },
+    "Blockchain": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "description": "ID of the blockchain"
+        },
+        "name": {
+          "type": "string",
+          "description": "Name of the blockchain"
+        },
+        "active": {
+          "type": "boolean",
+          "description": "Active status of the blockchain"
+        },
+        "dapp_growth_index": {
+          "type": "boolean",
+          "description": "DApp growth index of the blockchain"
+        },
+        "defi_growth_index": {
+          "type": "boolean",
+          "description": "DeFi growth index of the blockchain"
+        },
+        "icon": {
+          "type": "string",
+          "description": "Icon URL of the blockchain"
+        },
+        "slug": {
+          "type": "string",
+          "description": "Slug of the blockchain"
         }
       }
     },
